<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainActivityBackgroundColor"
    android:orientation="vertical">

    <FrameLayout style="@style/headerTitleLayoutStyle">
        <TextView style="@style/headerTextStyle"
            android:text="@string/header_title"
            android:textColor="@color/yp_white" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/common_padding">

        <Button
            android:id="@+id/search"
            style="@style/mainActivityButtonStyle"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <Button android:id="@+id/library"
            style="@style/mainActivityButtonStyle"
            android:text="@string/library"
            app:icon="@drawable/library" />

        <Button android:id="@+id/settings"
            style="@style/mainActivityButtonStyle"
            android:text="@string/settings"
            app:icon="@drawable/settings"
            android:layout_marginBottom="28dp"/>
    </LinearLayout>


</LinearLayout>