<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/panel_header_height"
            android:layout_marginBottom="24dp"
            android:paddingStart="@dimen/common_padding"
            android:paddingTop="@dimen/panel_header_padding_top"
            android:paddingBottom="@dimen/common_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/settings"
                android:textColor="@color/yp_black"
                android:textSize="@dimen/header_text_size" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:layout_width="match_parent"
                android:layout_height="@dimen/element_height"
                android:paddingStart="@dimen/common_padding"
                android:text="@string/night"
                android:textColor="@color/yp_black"
                android:textSize="@dimen/common_text_size"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/element_height"
                android:paddingStart="@dimen/common_padding"
                android:paddingEnd="@dimen/common_padding_end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:text="@string/share"
                    android:textColor="@color/yp_black"
                    android:textSize="@dimen/common_text_size"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:src="@drawable/share" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/element_height"
                android:paddingStart="@dimen/common_padding"
                android:paddingEnd="@dimen/common_padding_end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:text="@string/support"
                    android:textColor="@color/yp_black"
                    android:textSize="@dimen/common_text_size"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:src="@drawable/support" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/element_height"
                android:paddingStart="@dimen/common_padding"
                android:paddingEnd="@dimen/common_padding_end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:text="@string/user_agreement"
                    android:textColor="@color/yp_black"
                    android:textSize="@dimen/common_text_size"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:src="@drawable/arrow_forward" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/yp_light_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/search" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/search"
                    android:textColor="@color/yp_black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/library" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/library"
                    android:textColor="@color/yp_black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/settings" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="@color/yp_black"
                    android:textSize="@dimen/tab_bar_text_size" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</FrameLayout>