<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColor"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <LinearLayout
        android:id="@+id/headerLayout"
        style="@style/headerLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/headerTextStyle"
            android:layout_marginLeft="@dimen/header_text_margin_horizontal"
            android:text="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_element_height"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginHorizontal="@dimen/common_margin_horizontal"
            android:background="@drawable/edit_text_background_corner"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background_corner"
                android:drawableLeft="@drawable/search_14dp"
                android:drawablePadding="@dimen/edit_text_hint_icon_padding"
                android:drawableTint="@color/editTextDrawableTint"
                android:gravity="center_vertical"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="@dimen/edit_text_hint_icon_padding_edge"
                android:singleLine="true"
                android:textColor="@color/yp_black"
                android:textColorHint="@color/yp_grey"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="@dimen/edit_text_hint_text_size" />

            <ImageView
                android:id="@+id/clearIcon"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edit_text_height"
                android:layout_gravity="center"
                android:paddingHorizontal="@dimen/edit_text_clear_padding_horizontal"
                android:src="@drawable/close_clear_cancel"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/progress_bar_margin_top"
        android:indeterminateTint="@color/yp_blue"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchLayout" />

    <TextView
        android:id="@+id/historyAlertText"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="@dimen/common_margin_horizontal"
        android:layout_marginVertical="8dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:text="@string/you_searched"
        android:textAlignment="center"
        android:textFontWeight="@integer/text_font_weight_medium"
        android:textSize="@dimen/alertTextSize"
        app:layout_constraintTop_toBottomOf="@id/searchLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/historyClearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/historyAlertText" />

    <Button
        android:id="@+id/historyClearButton"
        android:layout_width="148dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/buttonBackgroundTintColor"
        android:fontFamily="@font/ys_display_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="6dp"
        android:text="@string/clear_history"
        android:textColor="@color/buttonTextColor"
        android:textFontWeight="@integer/text_font_weight_medium"
        android:textSize="14sp"
        app:cornerRadius="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/track_list_view" />

    <LinearLayout
        android:id="@+id/alertLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="102dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/track_list_view">

        <ImageView
            android:id="@+id/alertImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/alertText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:paddingHorizontal="24dp"
            android:textAlignment="center"
            android:textSize="@dimen/alertTextSize" />

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="91dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/buttonBackgroundTintColor"
            android:fontFamily="@font/ys_display_medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="6dp"
            android:text="@string/refresh"
            android:textColor="@color/buttonTextColor"
            android:textFontWeight="@integer/text_font_weight_medium"
            android:textSize="14sp"
            app:cornerRadius="54dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>